2009-04-15  Martin Leidig  <mleidig@schlund.de>

	Removed support for pustefix.xml configuration file. Now global
	properties are set in the properties section of the project.xml file.
	Existing properties from pustefix.xml were moved to project.xml (made
	most of them to regular elements in the appropriate sections).
	Refactored some classes to inject configuration as bean property value
	instead of Properties value. Removed deprecated properties.

2009-04-14  Andreas Kurth  <andreas.kurth@1und1.de>

	Added statusmessages merge support. Core will create its status codes constants
	class using "-override" directory. Overridden statusmessages will be merged with
	core/modules default messages. Archetype plugin honours the additional execution
	goal within webapp plugin configuration.
	This is exactly the same behaviour like in pre 0.14 pustefix versions.

2009-04-08  Martin Leidig  <mleidig@schlund.de>

	Removed support for global configuration (projects.xml). Moved namespaces 
	stuff to depend.xml. Tomcat/Apache settings are obsolete.
	Projects migrating to this core version have to move their namespaces
	configuration to depend.xml and the static path configuration to
	project.xml.

2009-04-07  Martin Leidig  <mleidig@schlund.de>

	Fixed method covariance problem: now we just skip all
	synthetic/bridge methods when introspecting a bean.

	Modified:
	* src/de/schlund/pfixcore/beans/BeanDescriptor.java
	* tests/junit/de/schlund/pfixcore/beans/BeanDescriptorTest.java

	Added:
	* tests/junit/de/schlund/pfixcore/oxm/CovariantBeanTest.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanA.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanB.java

2009-04-06  Michael Hartmeier <michael.hartmeier@1und1.de>

        Dump standalone.tomcat. It was always true since we have a war file build now.

2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl