@@ -755,7 +755,11 @@
   
   <xsl:template match="pfx:externalform">
   <form method="post">
-    <ixsl:attribute name="action"><ixsl:value-of select="$__contextpath"/>/xml/deref</ixsl:attribute>
+    <ixsl:attribute name="action">
+      <ixsl:value-of select="$__contextpath"/>
+      <ixsl:text>/xml/deref</ixsl:text>
+      <ixsl:call-template name="__fake_session_id_argument"/>
+    </ixsl:attribute>
     <xsl:variable name="link">addallparams:<xsl:value-of select="@href"/></xsl:variable>
     <input type="hidden" name="link">
       <ixsl:attribute name="value"><xsl:value-of select="$link"/></ixsl:attribute>  
